--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,19 +16,22 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Setup Node.js
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
-          node-version: '18'
+          node-version: '22'
           cache: 'npm'
 
       - name: Install dependencies
         run: npm ci
 
+      - name: Run type checking
+        run: npm run typecheck
+
       - name: Run linting
         run: npm run lint
 
-      - name: Run type checking
-        run: npm run typecheck
+      - name: Check formatting
+        run: npm run format:check
 
       - name: Run tests
         run: npm test -- --coverage --watchAll=false
@@ -55,9 +58,9 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Setup Node.js
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
-          node-version: '18'
+          node-version: '22'
           registry-url: 'https://npm.pkg.github.com'
           scope: '@your-username'
 
