--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,14 +33,17 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Run tests
-        run: npm test -- --coverage --watchAll=false
-
       - name: Run type checking
         run: npm run typecheck
 
       - name: Run linting
         run: npm run lint
+
+      - name: Check formatting
+        run: npm run format:check
+
+      - name: Run tests
+        run: npm test -- --coverage --watchAll=false
 
       - name: Build package
         run: npm run build
